# ai-news-analysis

./: .gitignore  README.md  analyze_news.py  fetch_news.py  main.py  pyproject.toml  requirements.txt  tech_news_scraper.py
.github/workflows/: scraper.yml
output/: tech_news_2026-06-01.json  tech_news_2026-06-01.md  tech_news_ai_sample_2026-06-01.md
output/2026-06-02/: tech_news_2026-06-02_18-59-54.json  tech_news_2026-06-02_18-59-54.md  tech_news_2026-06-02_19-21-23.md  tech_news_2026-06-02_19-21-23.txt  tech_news_2026-06-02_20-04-38.md  tech_news_2026-06-02_20-04-38.txt  tech_news_2026-06-02_21-59-24.md  tech_news_2026-06-02_21-59-24.txt  tech_news_2026-06-02_22-49-55.md  tech_news_2026-06-02_22-49-55.txt  tech_news_2026-06-02_23-36-53.md  tech_news_2026-06-02_23-36-53.txt
output/2026-06-03/: tech_news_2026-06-03_01-03-34.md  tech_news_2026-06-03_01-03-34.txt  tech_news_2026-06-03_03-15-06.md  tech_news_2026-06-03_03-15-06.txt  tech_news_2026-06-03_05-43-00.md  tech_news_2026-06-03_05-43-00.txt  tech_news_2026-06-03_07-48-38.md  tech_news_2026-06-03_07-48-38.txt  tech_news_2026-06-03_09-42-08.md  tech_news_2026-06-03_09-42-08.txt  tech_news_2026-06-03_11-40-50.md  tech_news_2026-06-03_11-40-50.txt  tech_news_2026-06-03_13-44-18.md  tech_news_2026-06-03_13-44-18.txt  tech_news_2026-06-03_15-38-56.md  tech_news_2026-06-03_15-38-56.txt  tech_news_2026-06-03_17-44-47.md  tech_news_2026-06-03_17-44-47.txt  tech_news_2026-06-03_19-24-37.md  tech_news_2026-06-03_19-24-37.txt  tech_news_2026-06-03_21-08-37.md  (+5 more)
tests/: test_output_paths.py
(+894 files in other folders)
