[project]
name = "ai-news-analysis"
version = "0.1.0"
description = "Tech News Scraper + Local Analyzer Pipeline - scrapes raw tech news to text and generates local Markdown analysis"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "feedparser>=6.0.10",
]

[tool.uv]
package = false
